# trip-table-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.pip  trip_table_parser.py
src/trip_table_parser/: main.py
